--- a/src/main/resources/static/scss/pages/order/_order-form.scss
+++ b/src/main/resources/static/scss/pages/order/_order-form.scss
@@ -204,6 +204,129 @@
                             letter-spacing: -0.4px;
                             cursor: pointer;
                         }
+
+                        .address-list {
+                            padding: 9px 0 0;
+                            position: relative;
+                            ul {
+                                margin-top: 30px;
+                                li {
+                                    position: relative;
+                                    overflow: hidden;
+                                    padding: 15px 0;
+                                    border-top: 1px dashed #d7d5d5;
+                                    .name {
+                                        display: block;
+                                        font-weight: 500;
+                                        color: #333;
+                                        font-size: 16px;
+                                    }
+                                    .address-description {
+                                        .custom-radio {
+                                            color: #383838;
+                                            font-size: 16px;
+                                            text-transform: capitalize;
+                                            display: block;
+                                            padding-top: 5px;
+                                            padding-left: 30px;
+                                            padding-right: 20px;
+
+                                            .choice-checkbox {
+                                                display: none;
+                                                &:checked ~ span {
+                                                    border: 6px solid #3971ff;
+                                                }
+                                            }
+
+                                            .check-btn {
+                                                height: 25px;
+                                                width: 25px;
+                                                border-radius: 50%;
+                                                border: 6px solid #e2e5ea;
+                                                display: block;
+                                                position: absolute;
+                                                right: 0;
+                                                top: 60px;
+                                            }
+
+                                            .check-address-delete {
+                                                position: absolute;
+                                                top: 25px;
+                                                right: 5px;
+                                                width: 15px;
+                                                height: 15px;
+                                            }
+                                        }
+                                        .address {
+                                            color: #383838;
+                                            margin-top: 18px;
+                                            letter-spacing: -0.4px;
+                                        }
+
+                                        .address-list-tel {
+                                            display: block;
+                                            margin: 8px 0 0 0;
+                                            color: rgb(102, 102, 102);
+                                            letter-spacing: -0.4px;
+                                        }
+                                    }
+
+                                    &:last-child {
+                                        border-bottom: 1px dashed #d7d5d5;
+                                    }
+                                }
+                            }
+
+                            .delivery-modify-btn-wrapper {
+                                text-align: right;
+                                padding: 10px 0;
+                                .delivery-modify-save-btn {
+                                }
+                                .delivery-modify-cancel-btn{}
+                            }
+
+                            .address-list-close-btn {
+                                position: absolute;
+                                top: 0;
+                                right: 0;
+                                padding: 0 10px;
+                                font-weight: 400;
+                                color: #fff;
+                                background: #ffffff;
+                                line-height: 38px;
+                                vertical-align: middle;
+                                display: inline-block;
+                                letter-spacing: -0.4px;
+                                width: 24px;
+                                height: 24px;
+                                border: 1px solid #bebebe;
+                                outline: none;
+
+                                &::before {
+                                    content: " ";
+                                    position: absolute;
+                                    top: 4px;
+                                    left: 10px;
+                                    height: 15px;
+                                    width: 2px;
+                                    background-color: #bebebe;
+                                    transform: rotate(45deg);
+                                    -webkit-transform: rotate(45deg);
+                                }
+
+                                &::after {
+                                    content: " ";
+                                    position: absolute;
+                                    top: 4px;
+                                    left: 10px;
+                                    height: 15px;
+                                    width: 2px;
+                                    background-color: #bebebe;
+                                    transform: rotate(-45deg);
+                                    -webkit-transform: rotate(-45deg);
+                                }
+                            }
+                        }
                     }
 
                     .new-address-wrapper {
@@ -223,7 +346,6 @@
                                 padding-top: 5px;
                                 padding-left: 30px;
                                 padding-right: 20px;
-                                // border-bottom: 1px solid #ebebeb;
 
                                 input {
                                     display: none;
@@ -241,19 +363,6 @@
                                     position: absolute;
                                     left: 0;
                                     top: 7px;
-
-                                    // &::after {
-                                    //     content: '';
-                                    //     height: 8px;
-                                    //     width: 8px;
-                                    //     background: #3971FF;
-                                    //     display: block;
-                                    //     position: absolute;
-                                    //     left: 50%;
-                                    //     top: 50%;
-                                    //     border-radius: 50%;
-                                    //     transition: 300ms ease-in-out 0s;
-                                    // }
                                 }
                             }
                         }
@@ -491,7 +600,7 @@
                     border-top: 1px solid #ebebeb;
                     padding: 20px 16px 15px;
 
-                    select {
+                    .req-select {
                         width: 100%;
                         padding: 0 20px 0 15px;
                         height: 42px;
@@ -500,10 +609,23 @@
                         color: #333;
                         border: 1px solid #c5c5c5;
                         font-size: 14px;
+                        outline: none;
+                    }
+
+                    .req-custom-input-wrap {
+                        display: block;
+                        margin-top: 10px;
+                        .req-custom-input {
+                            width: 100%;
+                            max-width: 100%;
+                            padding: 7px;
+                            font-weight: inherit;
+                            border: 1px solid #e1e1e1;
+                        }
                     }
                 }
 
-                .set-def-address-btn-warpper {
+                .set-def-address-btn-wrapper {
                     padding: 0 16px 20px;
                     position: relative;
 
