--- a/src/main/resources/templates/layouts/default-layout.html
+++ b/src/main/resources/templates/layouts/default-layout.html
@@ -219,7 +219,7 @@
             <footer th:fragment="footer" class="def-footer-area">
                 <div class="footer-header">
                     <ul>
-                        <li><a class="footer-header-link">HOME</a></li>
+                        <li><a href="#none" onclick="location.href='/'">HOME</a></li>
                         <li><a class="footer-header-link">COMPANY</a></li>
                         <li><a class="footer-header-link">AGREEMENT</a></li>
                         <li><a class="footer-header-link">PRIVACY</a></li>
